--- a/Alexander/build.gradle
+++ b/Alexander/build.gradle
@@ -2,3 +2,10 @@ apply plugin: 'java'
 apply plugin: 'application'
 mainClassName = "IgorProgram"
 
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation("org.testng:testng:7.4.0")
+}
