--- a/Alexander/build.gradle
+++ b/Alexander/build.gradle
@@ -7,5 +7,8 @@ repositories {
 }
 
 dependencies {
-    implementation("org.testng:testng:7.4.0")
+    implementation 'org.testng:testng:7.4.0'
+}
+test {
+    useTestNG()
 }
