--- a/adressbook-web-tests/build.gradle
+++ b/adressbook-web-tests/build.gradle
@@ -7,6 +7,7 @@ repositories {
 dependencies {
     implementation 'org.testng:testng:7.4.0'
     implementation 'org.seleniumhq.selenium:selenium-java:4.1.1'
+    implementation 'org.jetbrains:annotations:20.1.0'
 
 }
 test {
